--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
     displayName: Unit Tests
     inputs:
       command: 'test'
-      projects: './Challenges.CommentsRemover.UnitTests/Challenges.CommentsRemover.UnitTests.csproj'
+      projects: '**/Challenges.CommentsRemover.UnitTests.csproj'
       arguments: '--configuration ${{variables.buildConfiguration}} --collect "XPlat Code coverage"'
       testRunTitle: 'Unit Tests'
       
