--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ trigger: none
 
 variables:
   vmImageName: 'ubuntu-latest'
+  coverageThreshold: 0.9
 
 stages:
 - stage: BuildAndValidations
@@ -71,5 +72,5 @@ stages:
     - script: dotnet tool install --global CheckCoverage --version 1.0.1
       displayName: 'Install check'  
 
-    - script: checkcoverage "$(System.DefaultWorkingDirectory)/Cobertura.xml" 0.9
+    - script: checkcoverage "$(System.DefaultWorkingDirectory)/Cobertura.xml" $(coverageThreshold)
       displayName: 'CheckCoverage'
