Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,18 +18,6 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-      - task: SonarCloudPrepare@1
-        inputs:
-          SonarCloud: 'Sonar Comments Remover'
-          organization: 'wilsonnetodevops'
-          scannerMode: 'MSBuild'
-          projectKey: 'commentsremoversonar'
-          projectName: 'Comments Remover'
-          extraProperties: |
-            sonar.exclusions=**/obj/**,**/*.dll
-            sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
-            sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
-
       - task: DotNetCoreCLI@2
         displayName: Unit Tests
         inputs:
@@ -62,14 +50,53 @@ stages:
           targetPath: '$(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml' 
           artifactName: CoverageSummary
 
-      # - task: BuildQualityChecks@8
-      #   inputs:
-      #     checkCoverage: true
-      #     coverageFailOption: 'fixed'
-      #     coverageType: 'lines'
-      #     coverageThreshold: '70'
-      #     runTitle: 'Checking Coverage'
+      - task: BuildQualityChecks@8
+        inputs:
+          checkCoverage: true
+          coverageFailOption: 'fixed'
+          coverageType: 'lines'
+          coverageThreshold: '60'
+          runTitle: 'Checking Coverage'
       
+- stage: Sonar
+  displayName: Running Sonar
+  jobs:
+  - job: Sonar
+    displayName: Checking
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+      - task: DotNetCoreCLI@2
+        displayName: Restore
+        inputs:
+          command: 'restore'
+          projects: '**/*.sln'
+
+      - task: SonarCloudPrepare@1
+        inputs:
+          SonarCloud: 'Sonar Comments Remover'
+          organization: 'wilsonnetodevops'
+          scannerMode: 'MSBuild'
+          projectKey: 'commentsremoversonar'
+          projectName: 'Comments Remover'
+          extraProperties: |
+            sonar.exclusions=**/obj/**,**/*.dll
+            sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
+            sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
+
+      - task: DotNetCoreCLI@2
+        displayName: Build
+        inputs:
+          projects: '**/*.sln'
+          arguments: '--configuration Release'
+
+      - task: DotNetCoreCLI@2
+        displayName: Test
+        inputs:
+          command: test
+          projects: '**/*.sln'
+          arguments: '--configuration Release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --logger trx'
+
       - task: SonarCloudAnalyze@1
 
       - task: SonarCloudPublish@1
